[package]
name = "rust-cranker-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
async-tungstenite = { version = "0.16.1", features = ["async-tls", "async-std-runtime", "async-native-tls"] }
