[package]
name = "rust-cranker-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
async-native-tls = "0.4.0"
tokio = { version = "1.15.0", features = ["full"] }
async-tungstenite = { version = "0.17.1", features = ["async-std-runtime", "async-native-tls"] }
hyper = { version = "0.14", features = ["full"] }
bytes = "1.1.0"
async-stream = "0.3.3"
http = "0.2.6"
uuid = { version = "1.1.2", features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
#async-std = "1.10.0"
#futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
